--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!--Import materialize.css-->
   <link type="text/css" rel="stylesheet" href="plugins/materialize/css/materialize.min.css"  media="screen,projection"/>
+  <link type="text/css" rel="stylesheet" href="styles/main.css"  media="screen,projection"/>
 
   <!--Let browser know website is optimized for mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -16,15 +17,83 @@
     <div class="container">
       <div class="nav-wrapper">
         <a href="#" class="brand-logo">Country Compare</a>
-      </div>      
+      </div>
     </div>
   </nav>
-  <div class="container">
-    <h1>Country compare</h1>
+  <div id="loader" class="section center">
+    <div class="preloader-wrapper big active">
+      <div class="spinner-layer spinner-red-only">
+        <div class="circle-clipper left">
+          <div class="circle"></div>
+        </div><div class="gap-patch">
+          <div class="circle"></div>
+        </div><div class="circle-clipper right">
+          <div class="circle"></div>
+        </div>
+      </div>
+    </div>
+    <p class="red-text">Loading Data. Please Wait...</p>
+  </div>
+  <div id="content" class="container hide">
+    <div id="countries" class="row"></div>
+      <script id="countryTemplate" type="x-tmpl-mustache">
+        <div class="col s6 country" id="country-{{countryIndex}}">
+          <h2>
+            <span class="code"></span>
+            <a class="btn-floating btn-small waves-effect waves-light red lighten-2 modal-trigger" href="#" data-country-index="{{countryIndex}}"><i class="material-icons">mode_edit</i></a>
+          </h2>
+          <p class="name flow-text"></p>
+          <div class="card red lighten-4 population">
+            <div class="card-content red-text">
+              <span class="card-title">Popuplation</span>
+              <p></p>
+            </div>
+          </div>
+          <div class="card red lighten-4 area">
+            <div class="card-content red-text">
+              <span class="card-title">Area</span>
+              <p></p>
+            </div>
+          </div>
+          <div class="card red lighten-4 population-density">
+            <div class="card-content red-text">
+              <span class="card-title">Population Density</span>
+              <p></p>
+            </div>
+          </div>
+          <div class="card red lighten-4 gini">
+            <div class="card-content red-text">
+              <span class="card-title">Gini Coefficient</span>
+              <p></p>
+            </div>
+          </div>
+        </div>
+      </script>
+  </div>
+
+
+  <!-- Modal Structure -->
+  <div id="edit-country-modal" class="modal bottom-sheet">
+    <div class="container">
+      <div class="modal-content">
+        <h4>Choose a Country</h4>
+        <div class="card-panel">
+          <div class="input-field col s6">
+         <input placeholder="Search for a Country" id="country-name" type="text" class="validate">
+         <label for="country-name">Country Name</label>
+       </div>
+        </div>
+        <div class="collection">
+          <a href="#!" class="collection-item">Dummy</a>
+        </div>
+      </div>
+    </div>
   </div>
 
   <!--Import jQuery before materialize.js-->
   <script type="text/javascript" src="plugins/jquery/jquery.js"></script>
+  <script type="text/javascript" src="scripts/app.js"></script>
+  <script type="text/javascript" src="scripts/mustache.js"></script>
   <script type="text/javascript" src="plugins/materialize/js/materialize.min.js"></script>
 </body>
 </html>
